# wgpu-examples

./: Cargo.toml  build.rs
apps/example1/: Cargo.toml
apps/example1/src/: app.rs  camera.rs  camera_controller.rs  instance.rs  model.rs  resources.rs  texture.rs  wgpu_ctx.rs
apps/example2/: Cargo.toml
apps/example2/src/: bezier_app.rs  data.rs  main.rs  mod.rs  windows.rs
src/: Instance.rs  app.rs  cameraUniform.rs  img_utils.rs  main.rs  model.rs  shader.wgsl  texture.rs  vertex.rs  wgpu_ctx.rs
