[package]
name = "wgpu_01"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"

glam = "0.30.8"
image = "0.25.8"
pollster = "0.4.0"
tobj = { version = "4.0.3", features = ["async"] }
wgpu = "27.0.1"
winit = "0.30.12"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
