[workspace]
members = ["apps/example1", "apps/example2"]
default-members = ["apps/example2"]
resolver = "3"


[workspace.package]
name = "wgpu_demo"
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"

glam = "0.30.8"
image = "0.25.8"
log = "0.4.28"
pollster = "0.4.0"
tobj = { version = "4.0.3", features = ["async"] }
wgpu = "27.0.1"
winit = "0.30.12"
fs_extra = "1.3.0"
# [workspace.build-dependencies]
# anyhow = "1.0.100"
# fs_extra = "1.3.0"
